* Made top navbar sticky. * Made profile card sticky. * Changed object-fit mode for card images. * Fixed code image alignment issue. * Changed over to Boostrap built-in margining and padding.

--- a/aaronhastingsme/static/css/base.css
+++ b/aaronhastingsme/static/css/base.css
@@ -22,7 +22,7 @@ body {
 }
 
 .custom-card-col {
-    //margin-right: -0.5em;
+    /*margin-right: -0.5em;*/
 }
 
 a:active {
@@ -45,28 +45,35 @@ a:visited {
    text-decoration: none;
 }
 
-//.custom-card-body-profile {
-//    line-height: 1.8;
-//}
+/*.custom-card-body-profile {*/
+/*    line-height: 1.8;*/
+/*}*/
 
 .custom-card-img {
     padding: 1em;
+    object-fit: cover;
 }
 
 .custom-card-img-container {
-    width: 12em;
-    height: 12em;
+    width: 11em;
+    height: 11em;
+    line-height: 11em;
     margin: auto;
 }
 
 .custom-card-main {
-    width: 22em;
+    /*width: 22em;*/
     height: 19.5em;
     transition: all 0.3s ease;
 }
 
 .custom-card-main:hover {
     transform: scale(1.05);
+}
+
+.custom-card-profile {
+    top: 7.65rem;
+    position: sticky !important;
 }
 
 .custom-profile-img-container {
@@ -78,10 +85,10 @@ a:visited {
     padding: 0.4em;
 }
 
-.card {
-    width: auto;
-    margin: 1em;
-}
+/*.card {*/
+/*    width: auto;*/
+/*    margin: 1em;*/
+/*}*/
 
 #link-source-code {
   position: fixed;
@@ -106,15 +113,18 @@ a:visited {
     margin-bottom: 0.1em;
 }
 
-.row {
-    margin-bottom: -1em;
-}
+/*.row {*/
+/*    margin-bottom: -1em;*/
+/*}*/
 
 @media screen and (max-width: 480px) {
     .navbar-brand {
         padding-left: 0.3em;
         font-size: 170% !important;
     }
+}
+
+@media screen and (min-width: 768px) {
 }
 
 @media only screen and (min-width: 767px) {
